--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,51 @@
-.App {
-  text-align: center;
+@font-face {
+	font-family: Bebas;
+	src: url(./assets/Bebas.ttf);
 }
 
+.App-header {
+	padding: 20px;
+}
 
+.App-logo {
+	height: 200px;
+	margin-left: 20px;
+}
 
+main {
+	text-align: center;
+	margin: auto;
+	width: 70%;
+	max-width: 700px;
+	padding: 50px 10px;
+}
 
+nav {
+  font-family: "Lato", sans-serif;
+  color: #040706;
+  padding: 1% 0;
+  background-color: #B7DBF5;
+}
+
+.navlink {
+	color: #040706;
+	text-decoration: none;
+	margin: auto;
+}
+
+.navlink:visited {
+	text-decoration: none;
+}
+
+.desktopNav {
+  column-count: 8;
+  padding: 18px;
+  margin-left: auto;
+  display: flex;
+  font-size: 16px;
+  height: 18px;
+}
+
+h1 {
+	font-family: 'Bebas';
+}
