--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,6 @@
 	width: 100vw;
 	z-index: 999;
 }
-
-
 .App-logo {
 	height: 120px;
 	margin-left: 20px;
@@ -329,6 +327,38 @@ ul {
 	margin: 15px;
 }
 
+.important-info {
+	top: 20px;
+}
+
+.important-info p {
+	margin: auto !important;
+	width: 50%;
+	padding-top: 20px;
+}
+
+/* .google-calendar {
+	position: relative; 
+	padding-bottom: 75%; 
+	height: 0; 
+	overflow: show;
+	width: 80%;
+	margin: auto;	
+}
+.google-calendar iframe {
+		 
+	position: absolute; 
+	top:0; 
+	left: 0; 
+	width: 100%; 
+	height: 100%;
+		 
+} */
+
+.class-panel {
+	padding-bottom: 20px;
+}
+
 .class-panel1 {
 	border: #349EDB solid 2px;
 	border-radius: 3px;
@@ -341,6 +371,11 @@ ul {
 	border-radius: 3px;
 	width: 400px;
 	margin: 15px;
+}
+
+.class-panel-container, .location-panel {
+	position: relative;
+	top: 20px;
 }
 
 .aQ p, .price-item p, .class-panel p {
